<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <TextView
        android:text="@string/widgetMapTypeTitle"
        android:id="@+id/textView2"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:id="@+id/linearLayoutNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:contentDescription="@null"
                android:padding="5dp"
                android:src="@drawable/map_type_normal" />

            <TextView
                android:id="@+id/textViewNormal"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/widgetMapTypeNormal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutSatellite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:contentDescription="@null"
                android:padding="5dp"
                android:src="@drawable/map_type_satellite" />

            <TextView
                android:id="@+id/textViewSatellite"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/widgetMapTypeSatellite" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutTerrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:contentDescription="@null"
                android:padding="5dp"
                android:src="@drawable/map_type_terrain" />

            <TextView
                android:id="@+id/textViewTerrain"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/widgetMapTypeTerrain" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutHybrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:contentDescription="@null"
                android:padding="5dp"
                android:src="@drawable/map_type_hybrid" />

            <TextView
                android:id="@+id/textViewHybrid"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/widgetMapTypeHybrid" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>