<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <TextView
        android:text="@string/widgetMapCenterLockMoveTo"
        android:id="@+id/textView2"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:id="@+id/linearLayoutPilot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@null"
                android:padding="5dp"
                android:src="@drawable/map_center_lock" />

            <TextView
                android:id="@+id/textViewPilot"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/widgetMapCenterLockPilot" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutTakeoff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@null"
                android:padding="5dp"
                android:src="@drawable/map_center_lock" />

            <TextView
                android:id="@+id/textViewTakeoff"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/widgetMapCenterLockTakeOff" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutAircraft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@null"
                android:padding="5dp"
                android:src="@drawable/map_center_lock" />

            <TextView
                android:id="@+id/textViewAircraft"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/widgetMapCenterLockAircraft" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>