<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background"
    tools:context=".WidgetLocationCoordinate">

    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/widgetLocationCoordinateCoordinate"
        app:layout_constraintBottom_toTopOf="@+id/joystickView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewLatitude"
        style="@style/TextAppearance.AppCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/widgetLocationCoordinateLatitude"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/joystickView" />

    <com.edittextpicker.aliazaz.EditTextPicker
        android:id="@+id/editTextLongitude"
        style="@style/TextAppearance.AppCompat"
        android:layout_width="128dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_with_gray_corners"
        android:gravity="end|center_vertical"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal|numberSigned"
        android:maxLength="11"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"        android:text="0.000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLongitude"
        app:pattern="^(\\+|-)?(?:180(?:(?:\\.0{1,6})?)|(?:[0-9]|[1-9][0-9]|1[0-7][0-9])(?:(?:\\.[0-9]{1,6})?))$"
        tools:ignore="Autofill,HardcodedText,LabelFor"
        tools:text="12.456" />

    <com.edittextpicker.aliazaz.EditTextPicker
        android:id="@+id/editTextLatitude"
        style="@style/TextAppearance.AppCompat"
        android:layout_width="128dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_with_gray_corners"
        android:gravity="end|center_vertical"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal|numberSigned"
        android:maxLength="12"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"        android:text="0.000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLatitude"
        app:pattern="^(\\+|-)?(?:90(?:(?:\\.0{1,6})?)|(?:[0-9]|[1-8][0-9])(?:(?:\\.[0-9]{1,6})?))$"
        tools:ignore="Autofill,HardcodedText,LabelFor"
        tools:text="12.345" />

    <TextView
        android:id="@+id/textViewLongitude"
        style="@style/TextAppearance.AppCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/widgetLocationCoordinateLongitude"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLatitude" />

    <com.developwear.joystickview.JoystickView
        android:id="@+id/joystickView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextLatitude"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.501" />

</androidx.constraintlayout.widget.ConstraintLayout>